fix: [PIE-4664]: alignment issue for empty pipeline pages (#10339)
* fix: [PIE-4664]: alignment issue for empty pipeline pages

* fix: [PIE-4664]: alignment issue for empty pipeline pages

--- a/src/modules/70-pipeline/pages/execution-list/ExecutionListEmpty/ExecutionListEmpty.module.scss
+++ b/src/modules/70-pipeline/pages/execution-list/ExecutionListEmpty/ExecutionListEmpty.module.scss
@@ -6,12 +6,9 @@
  */
 
 .noExecutions {
-  display: flex;
-  height: 100%;
-  margin-top: 10%;
-  justify-content: center;
-  align-items: center;
+  margin: auto;
   text-align: center;
+
   .image {
     width: 320px;
     margin-bottom: 40px;
